Test E2E done Test Unit doing

--- a/Tournois_Gamer_BlazorServer/Pages/AnciennePage/InscriptionTeamBis.razor
+++ b/Tournois_Gamer_BlazorServer/Pages/AnciennePage/InscriptionTeamBis.razor
@@ -97,7 +97,7 @@
     /// Méthode exécuté à la création des joueurs
     /// </summary>
     /// <param name="tournament"></param>
-    private void CreatePlayers(TournamentDto tournament)
+    public void CreatePlayers(TournamentDto tournament)
     {
         inscription.Tournament = tournament;
         inscription.Players.Clear();
