--- a/Tournois_Gamer_BlazorServer/Pages/InscriptionIndividual.razor
+++ b/Tournois_Gamer_BlazorServer/Pages/InscriptionIndividual.razor
@@ -3,7 +3,10 @@
 @using Tournois_Gamer_BlazorServer.Data.Evenement.Models;
 @using Tournois_Gamer_BlazorServer.Data.Evenement.Services;
 @using Tournois_Gamer_BlazorServer.Data.Inscription;
+@using System.Threading;
 @inject IEventServices eventServices
+@inject NavigationManager NavManager
+
 
 <EditForm Model="@inscription" OnSubmit="OnValidSubmit">
     <ObjectGraphDataAnnotationsValidator />
@@ -54,8 +57,11 @@
                 </div>
 
                 <div class="mud-card-actions">
-                    <button type="submit" class="btn btn-primary ml-auto">Register</button>
+                    <button type="submit" class="btn btn-primary ml-auto">Inscription</button>
                 </div>
+
+                <h6 class="text-decoration-underline">@messageGoodInscription</h6>
+
             </div>
         </div>
     </div>
@@ -71,7 +77,14 @@
 
     private EventDto? event_;
 
-    private string errorMessage = string.Empty;
+    private string messageGoodInscription = string.Empty;
+
+    private void ShowMessageAndRedirect()
+    {
+        messageGoodInscription = "Votre inscription à bien été prise en compte !";
+        Thread.Sleep(2000);
+        NavManager.NavigateTo("/");
+    }
 
     /// <summary>
     /// Méthode exécuté à l'initialization de la page
@@ -105,13 +118,8 @@
         if (context.Validate())
         {
             inscription.InscriptionIndividualDtoId = 1;
-
+            ShowMessageAndRedirect();
             StateHasChanged();
-        }
-        else
-        {
-            errorMessage = "Certains champs sont incorrects. Veuillez vérifier le formulaire.";
-            // Le formulaire n'est pas valide, ne rien faire ou afficher un message d'erreur supplémentaire si nécessaire
         }
     }
 }
